[project]
name = "multi-modal-retrieval-augmented-generation"
version = "0.1.0"
description = "Este projeto permite responder perguntas sobre documentos, vídeos e imagens usando LangChain e Streamlit. Os usuários podem fazer upload de arquivos PDF, DOCX ou vídeos do YouTube e interagir com o conteúdo consultando informações específicas. O projeto utiliza modelos avançados de linguagem para processar documentos, transcrever vídeos e responder perguntas com base no conteúdo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.17",
    "langchain-cerebras>=0.5.0",
    "langchain-community>=0.3.16",
    "langchain-google-genai>=2.0.9",
    "langchain-groq>=0.2.4",
    "langchain-huggingface>=0.1.2",
    "langchain-mistralai>=0.2.6",
    "openai-whisper>=20240930",
    "pymupdf>=1.25.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.41.1",
    "streamlit-pdf-viewer>=0.0.21",
    "torch>=2.6.0",
    "youtube-transcript-api>=0.6.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
